--- a/k8s/OrdersService/Api/orders-service-api-deployment.yaml
+++ b/k8s/OrdersService/Api/orders-service-api-deployment.yaml
@@ -19,6 +19,12 @@ spec:
         - name: orders-service-api
           imagePullPolicy: Always
           image: wikator/orders-service:latest
+          livenessProbe:
+            httpGet:
+              path: /up
+              port: 3000
+            initialDelaySeconds: 5
+            periodSeconds: 5
           env:
             - name: DATABASE_HOST
               value: postgres
