--- a/BooksServiceApi/BooksServiceApi.csproj
+++ b/BooksServiceApi/BooksServiceApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.26.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
