Added orders to frontend

--- a/k8s/OrdersService/Api/orders-service-api-deployment.yaml
+++ b/k8s/OrdersService/Api/orders-service-api-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           image: wikator/orders-service:latest
           livenessProbe:
             httpGet:
-              path: /up
+              path: /healthz
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
