--- a/NotificationService/src/main/resources/application.properties
+++ b/NotificationService/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.rabbitmq.password=password
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 
+management.endpoints.web.base-path=/
+management.endpoints.web.path-mapping.health=healthz
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health
